<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.PartOneFragment">
<ImageView
    android:id="@+id/img_part_one"
    android:layout_marginTop="30dp"
    android:layout_marginHorizontal="24dp"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:src="@color/black">
</ImageView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_keyA"
        android:layout_marginTop="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:paddingStart="24dp"
        android:textSize="18sp"
        android:text="@string/keyA"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_keyB"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:paddingStart="24dp"
        android:textSize="18sp"
        android:text="@string/keyB"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_keyC"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:paddingStart="24dp"
        android:textSize="18sp"
        android:text="@string/keyC"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_keyD"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:paddingStart="24dp"
        android:textSize="18sp"
        android:text="@string/keyD"/>

</LinearLayout>