<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RealTestActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/part1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_test_part1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="6dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/part2"
                android:textSize="20sp"
                android:textStyle="bold" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_test_part2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/part3"
                android:textSize="20sp"
                android:textStyle="bold" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_test_part3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/part4"
                android:textSize="20sp"
                android:textStyle="bold" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_test_part4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
    <LinearLayout

        android:id="@+id/bottom_audio_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">


        <ImageView
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pause" />

        <SeekBar
            android:id="@+id/seek_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:secondaryProgressTint="@color/white" />

        <TextView
            android:id="@+id/txt_timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--:--"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="18sp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>